--- a/htmlList.html
+++ b/htmlList.html
@@ -279,12 +279,12 @@
                         <td>Profile</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10101.html">cup10101.html</a></td>
-                        <td class="red">진행 중</td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>암호 변경</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/cup10102.html">cup10102.html</a></td>
                         <td class="red"></td>
                     </tr>
 
