--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -294,7 +294,7 @@
                         <th>조직</th>
                         <td>Organization 목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="Organization_a/cup10201.html">cup10201.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
@@ -534,7 +534,7 @@
                         <th>관리자</th>
                         <td>시스템코드목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="admin_a/cup11002.html">cup11002.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
