--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -145,6 +145,33 @@
 		<input type="text" name="" class="inp" id="">
 		<button type="button" class="inpReset"></button>
 	</div>
+
+
+	<div class="inputBox Edit_User schType">
+		<div class="inner">
+			<div class="thumb">
+				<img src="../static/images/common/icon/icon_person_small.png" alt="" />
+			</div>
+			<input type="text" class="inp autoSch Edit_User code Readonly" id="n" readonly="readonly" style="width:500px;">
+			<input type="text" name="" class="inp autoSch Edit_User name" id="" placeholder="Type Company Name">
+			<button type="button" class="inpReset"></button>
+		</div>
+	</div>
+
+	<div class="inputBox Edit_User schType">
+		<div class="inner">
+			<div class="thumb">
+				<img src="../static/images/common/icon/icon_person_small.png" alt="" />
+			</div>
+			<input type="text" class="inp autoSch Edit_User code Readonly" id="n" readonly="readonly" style="width:500px;">
+			<input type="text" name="" class="inp autoSch Edit_User name" id="" placeholder="Type Company Name">
+			<button type="button" class="inpReset"></button>
+		</div>
+	</div>
+
+
+
+
 	<!-- souce code 뷰어 -->
 	<div class="box">
 		<pre class="brush: html;">
@@ -158,8 +185,6 @@
 		</pre>
 	</div>
 	<!-- //souce code 뷰어 -->
-
-
 
 
 
@@ -257,6 +282,26 @@
 	<!-- //souce code 뷰어 -->
 
 
+	<h2>input타입 - Edit_AlphaNum</h2>
+	<div class="inputBox Edit_AlphaNum">
+		<input type="text" name="" class="inp" id="">
+		<button type="button" class="inpReset"></button>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox Edit_AlphaNum">
+				<input type="text" name="" class="inp" id="">
+				<button type="button" class="inpReset"></button>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+
+
+
+
 	<h2>input타입 - 증감</h2>
 	<div class="inputBox count">
 		<button type="button" class="plus"><span>Plus</span></button>
@@ -333,7 +378,7 @@
 		<dd>
 			<div class="inputBox schType ty1">
 				<div class="inner">
-					<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
+					<input type="text" class="inp autoSch ty1 code Readonly" id="n" readonly="readonly">
 					<input type="text" name="" class="inp autoSch ty1 name" id="i10003-company" placeholder="Type Company Name">
 					<button type="button" class="inpReset"></button>
 				</div>
