--- a/subscription_a/cup10505.html
+++ b/subscription_a/cup10505.html
@@ -753,7 +753,7 @@
 														</div>
 														<div class="changeBtn">
 															<div class="fileBox">
-																<label for="imgUpload" id="cup10505_changeLogo">Change Logo</label>
+																<label for="imgUpload" id="cup10505_changeLogo">Change Picture</label>
 																<input type="file" name="imgUpload" id="imgUpload" class="fileUpload" />
 															</div>
 														</div>
