--- a/htmlList.html
+++ b/htmlList.html
@@ -182,7 +182,7 @@
                         <th>로그인</th>
                         <td>Sign In</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10001.html">login/cup10001.html</a></td>
+                        <td><a target="_blank" href="login/cup10001.html">cup10001.html</a></td>
                         <td class="red">
 							2019-01-29 수정 <br />
 							2019-02-01 수정
@@ -191,7 +191,7 @@
 					<tr>
                         <td>Password</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10002.html">login/cup10002.html</a></td>
+                        <td><a target="_blank" href="login/cup10002.html">cup10002.html</a></td>
                         <td>
 							제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정 <br />
 							<span class="red">2019-01-29 수정</span> <br />
@@ -201,7 +201,7 @@
 					<tr>
                         <td>신규가입</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10003.html">login/cup10003.html</a></td>
+                        <td><a target="_blank" href="login/cup10003.html">cup10003.html</a></td>
                         <td class="red">
 							2019-01-29 수정 <br />
 							2019-02-01 수정
@@ -210,7 +210,7 @@
 					<tr>
                         <td>잊은암호 변경요청</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10004.html">login/cup10004.html</a></td>
+                        <td><a target="_blank" href="login/cup10004.html">cup10004.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -218,7 +218,7 @@
 					<tr>
                         <td>잊은암호 변경</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10005.html">login/cup10005.html</a></td>
+                        <td><a target="_blank" href="login/cup10005.html">cup10005.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -226,7 +226,7 @@
 					<tr>
                         <td>신규가입 확인(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10010.html">login/cup10010.html</a></td>
+                        <td><a target="_blank" href="login/cup10010.html">cup10010.html</a></td>
                         <td class="red">
 							2019-01-29 수정
 						</td>
@@ -234,7 +234,7 @@
 					<tr>
                         <td>신규가입 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10006.html">login/cup10006.html</a></td>
+                        <td><a target="_blank" href="login/cup10006.html">cup10006.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -242,7 +242,7 @@
 					<tr>
                         <td>신규가입 요청 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10007.html">login/cup10007.html</a></td>
+                        <td><a target="_blank" href="login/cup10007.html">cup10007.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -250,13 +250,13 @@
 					<tr>
                         <td>잊은암호변경 확인(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10008.html">login/cup10008.html</a></td>
+                        <td><a target="_blank" href="login/cup10008.html">cup10008.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>잊은암호변경 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10009.html">login/cup10009.html</a></td>
+                        <td><a target="_blank" href="login/cup10009.html">cup10009.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -264,7 +264,7 @@
 					<tr>
                         <td>Home</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10011.html">login/cup10011.html</a></td>
+                        <td><a target="_blank" href="login/cup10011.html">cup10011.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
@@ -282,7 +282,7 @@
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>암호 변경</td>
+                        <td>암호 변경 - <span class="red">[ 팝업 ]</span></td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10102.html">cup10102.html</a></td>
                         <td class="red"></td>
@@ -388,7 +388,7 @@
 					<tr>
                         <td>부가서비스선택</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00002.html">homepage/cup00002.html</a></td>
+                        <td><a target="_blank" href="homepage/cup00002.html">cup00002.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -396,7 +396,7 @@
 					<tr>
                         <td>플랫폼선택</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00003.html">homepage/cup00003.html</a></td>
+                        <td><a target="_blank" href="homepage/cup00003.html">cup00003.html</a></td>
                         <td class="red">
 							2019-02-01 수정
 						</td>
@@ -404,24 +404,26 @@
 					<tr>
                         <td>계약정보입력</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
+                        <td><a target="_blank" href="homepage/cup00005.html">cup00005.html</a></td>
                         <td class="red">
 							2019-01-29 수정 <br />
-							2019-02-01 수정
+							2019-02-01 수정 <br />
+							2019-02-12 수정
 						</td>
                     </tr>
 					<tr>
                         <td>계약서확인</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00006.html">homepage/cup00006.html</a></td>
+                        <td><a target="_blank" href="homepage/cup00006.html">cup00006.html</a></td>
                         <td class="red">
-							2019-02-01 수정
+							2019-02-01 수정 <br />
+							2019-02-12 수정
 						</td>
                     </tr>
 					<tr>
                         <td>계약정보확인</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00007.html">homepage/cup00007.html</a></td>
+                        <td><a target="_blank" href="homepage/cup00007.html">cup00007.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
