--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -295,7 +295,9 @@
                         <td>Organization 목록</td>
                         <td></td>
                         <td><a target="_blank" href="Organization_a/cup10201.html">cup10201.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-12  수정
+						</td>
                     </tr>
 					<tr>
                         <td>Organization 관리</td>
@@ -345,7 +347,9 @@
                         <td>가입정보관리</td>
                         <td></td>
                         <td><a target="_blank" href="subscription_a/cup10505.html">cup10505.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-12 수정
+						</td>
                     </tr>
 					<tr>
                         <td>상품선택(팝업)</td>
@@ -365,7 +369,9 @@
                         <td>과금정책목록</td>
                         <td></td>
                         <td><a target="_blank" href="billing_a/cup10601.html">cup10601.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-12 수정
+						</td>
                     </tr>
 					<tr>
                         <td>신규과금정책</td>
@@ -470,7 +476,8 @@
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10701.html">cup10701.html</a></td>
                         <td class="red">
-							2019-02-01 수정
+							2019-02-01 수정 <br />
+							2019-02-12 수정
 						</td>
                     </tr>
 					<tr>
@@ -482,14 +489,17 @@
 							2019-01-30 수정 <br />
 							2019-01-31 수정 <br />
 							2019-02-01 수정 <br />
-							2019-02-07 수정
+							2019-02-07 수정 <br />
+							2019-02-11 수정
 						</td>
                     </tr>
 					<tr>
                         <td>가격목록</td>
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10703.html">cup10703.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-12 수정
+						</td>
                     </tr>
 					<tr>
                         <td>가격관리</td>
