--- a/Organization_a/cup10201.html
+++ b/Organization_a/cup10201.html
@@ -169,7 +169,9 @@
 										<dl class="inpItem">
 											<dt id="i10201-kewordLb">Keyword</dt>
 											<dd>
-												<div class="inputBox schType keyword">
+												<!-- 2019-02-12 수정 -->
+												<div class="inputBox keyword">
+													<!--// 2019-02-12 수정 -->
 													<div class="inner">
 														<input type="text" name="i10201-keword" class="inp autoSch keyword name" id="i10201-keword" placeholder="Organization, Alias, Company" maxlength="50">
 														<button type="button" class="inpReset"></button>
@@ -449,7 +451,61 @@
 							</div>
 							<h3 class="tit" id="i10201-organizationsLb">Organizations</h3>
 							<div class="ibsheepTop">
-								<div class="filter" id="i10201-filterStatus">filter</div>
+								<!-- 2019-02-12 수정 -->
+								<!-- <div class="filter" id="i10201-filterStatus">filter</div> -->
+								<div class="ui floating dropdown labeled icon button filter" id="i10201-filterStatus">
+									<i class="filter icon"></i>
+									<span class="text">Filter Posts</span>
+									<div class="menu">
+										<div class="ui icon search input">
+											<i class="search icon"></i>
+											<input type="text" placeholder="Search tags...">
+										</div>
+										<div class="header">
+											<i class="tags icon"></i>
+											Tag Label
+										</div>
+										<div class="scrolling menu">
+											<div class="item">
+												<div class="ui red empty circular label"></div>
+												Important
+											</div>
+											<div class="item">
+												<div class="ui blue empty circular label"></div>
+												Announcement
+											</div>
+											<div class="item">
+												<div class="ui black empty circular label"></div>
+												Cannot Fix
+											</div>
+											<div class="item">
+												<div class="ui purple empty circular label"></div>
+												News
+											</div>
+											<div class="item">
+												<div class="ui orange empty circular label"></div>
+												Enhancement
+											</div>
+											<div class="item">
+												<div class="ui empty circular label"></div>
+												Change Declined
+											</div>
+											<div class="item">
+												<div class="ui yellow empty circular label"></div>
+												Off Topic
+											</div>
+											<div class="item">
+												<div class="ui pink empty circular label"></div>
+												Interesting
+											</div>
+											<div class="item">
+												<div class="ui green empty circular label"></div>
+												Discussion
+											</div>
+										</div>
+									</div>
+								</div>
+								<!--// 2019-02-12 수정 -->
 								<button type="button" class="btn" id="">Add Organization</button>
 							</div>
 							<div class="ibsheetDiv">
