--- a/service_a/cup10701.html
+++ b/service_a/cup10701.html
@@ -171,7 +171,9 @@
 										<dl class="inpItem">
 											<dt id="">Keyword</dt>
 											<dd>
-												<div class="inputBox schType keyword">
+												<!-- 2019-02-12 수정 -->
+												<div class="inputBox keyword">
+													<!--// 2019-02-12 수정 -->
 													<div class="inner">
 														<input type="text" name="" class="inp autoSch keyword name" id="" placeholder="Type Company Name">
 														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
@@ -212,7 +214,61 @@
 							</div>
 							<h3 class="tit" id="i10701_servicesLb">Services</h3>
 							<div class="ibsheepTop">
-								<div class="filter" id="i10701_filterStatus">filter</div>
+								<!-- 2019-02-12 수정 -->
+								<!-- <div class="filter" id="i10701_filterStatus">filter</div> -->
+								<div class="ui floating dropdown labeled icon button filter" id="i10701_filterStatus">
+									<i class="filter icon"></i>
+									<span class="text">Filter Posts</span>
+									<div class="menu">
+										<div class="ui icon search input">
+											<i class="search icon"></i>
+											<input type="text" placeholder="Search tags...">
+										</div>
+										<div class="header">
+											<i class="tags icon"></i>
+											Tag Label
+										</div>
+										<div class="scrolling menu">
+											<div class="item">
+												<div class="ui red empty circular label"></div>
+												Important
+											</div>
+											<div class="item">
+												<div class="ui blue empty circular label"></div>
+												Announcement
+											</div>
+											<div class="item">
+												<div class="ui black empty circular label"></div>
+												Cannot Fix
+											</div>
+											<div class="item">
+												<div class="ui purple empty circular label"></div>
+												News
+											</div>
+											<div class="item">
+												<div class="ui orange empty circular label"></div>
+												Enhancement
+											</div>
+											<div class="item">
+												<div class="ui empty circular label"></div>
+												Change Declined
+											</div>
+											<div class="item">
+												<div class="ui yellow empty circular label"></div>
+												Off Topic
+											</div>
+											<div class="item">
+												<div class="ui pink empty circular label"></div>
+												Interesting
+											</div>
+											<div class="item">
+												<div class="ui green empty circular label"></div>
+												Discussion
+											</div>
+										</div>
+									</div>
+								</div>
+								<!--// 2019-02-12 수정 -->
 								<button type="button" class="btn" id="i10701_addService">Add Service</button> <!-- 2019-02-01 수정 -->
 							</div>
 							<div class="ibsheetDiv">
