--- a/service_a/cup10702.html
+++ b/service_a/cup10702.html
@@ -255,17 +255,15 @@
 											<dl class="inpItem">
 												<dt id="cup10702_suggestedTariff">Suggested Tariff</dt>
 												<dd>
-													<!-- 2019-01-31 수정 -->
-													<div class="comboBox">
-														<select class="comboSelect" id="cup10702_suggestedTariff" placeholder="Select a Tariff">
-															<option value="">Select a Type</option>
-															<option value="T-Shirt">T-Shirt</option>
-															<option value="T-Shirt Woman">T-Shirt Woman</option>
-															<option value="Yellow T-Shirt">Yellow T-Shirt</option>
-															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
-														</select>
+													<!-- 2019-02-11 수정 -->
+													<div class="inputBox schType ty1">
+														<div class="inner">
+															<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
+															<input type="text" name="cup10702_suggestedTariff" class="inp autoSch ty1 name" id="cup10702_suggestedTariff" placeholder="Select a Tariff">
+															<button type="button" class="inpReset"></button>
+														</div>
 													</div>
-													<!--// 2019-01-31 수정 -->
+													<!--// 2019-02-11 수정 -->
 												</dd>
 											</dl>
 										</li>
