--- a/htmlList.html
+++ b/htmlList.html
@@ -287,6 +287,30 @@
                         <td><a target="_blank" href="user/cup10102.html">cup10102.html</a></td>
                         <td class="red"></td>
                     </tr>
+					<tr>
+                        <td>사용자초청(팝업)</td>
+                        <td></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>해지 요청(메일)</td>
+                        <td></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>해지 요청 확인</td>
+                        <td></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>사용자초청(메일)</td>
+                        <td></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td class="red"></td>
+                    </tr>
 
 					<tr class="line">
                         <th>조직</th>
