--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -250,13 +250,13 @@
                         <th>사용자</th>
                         <td>Profile</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/cup10101.html">cup10101.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>암호 변경</td>
+                        <td>암호 변경 - <span class="red">[ 팝업 ]</span></td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/cup10102.html">cup10102.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
@@ -268,25 +268,25 @@
 					<tr>
                         <td>사용자초청(팝업)</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>해지 요청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>해지 요청 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>사용자초청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/.html">.html</a></td>
                         <td class="red"></td>
                     </tr>
 
@@ -544,13 +544,13 @@
                         <th>관리자</th>
                         <td>시스템코드목록</td>
                         <td></td>
-                        <td><a target="_blank" href="admin_a/cup11002.html">cup11002.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>시스템코드관리</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+						<td><a target="_blank" href="admin_a/cup11002.html">cup11002.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
