--- a/service_a/cup10701.html
+++ b/service_a/cup10701.html
@@ -125,22 +125,9 @@
 							<li class="home single">
 								<a href="#">Home</a>
 							</li>
-							<!-- <li>
-			<a href="#" class="on">
-				<span>House B/L 1</span>
-				<span>OBK-000468</span>
-			</a>
-			<button type="button" class="tabClose" onclick="TabRemove(this)">Close</button>
-		</li> -->
-							<!-- <li>
-			<a href="#">
-				<span>House B/L 2</span>
-				<span>OBK-000468</span>
-			</a>
-			<button type="button" class="tabClose" onclick="TabRemove(this)">Close</button>
-		</li> -->
 						</ul>
 						<div class="tabListBox">
+							<span>More</span>
 							<ul>
 							</ul>
 						</div>
@@ -201,7 +188,6 @@
 							<h3 class="tit" id="i10701_servicesLb">Services</h3>
 							<div class="ibsheepTop">
 								<!-- 2019-02-12 수정 -->
-								<!-- <div class="filter" id="i10701_filterStatus">filter</div> -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10701_filterStatus">
 									<i class="filter icon"></i>
 									<span class="text">Filter Posts</span>
