--- a/homepage/cup00002.html
+++ b/homepage/cup00002.html
@@ -42,11 +42,13 @@
 					<dl class="inpItem">
 						<dt id="i00002_basicLb">Basic</dt>
 						<dd class="tr">
+							<!-- 2019-02-01 수정 -->
 							<div class="inputBox count">
-								<button type="button" class="plus"><span>Plus</span></button> <!-- 2019-02-01 수정 -->
-								<input type="number" name="i00002_basic" class="inp Edit_Count" id="i00002_basic" min="0" value="15">
-								<button type="button" class="minus"><span>Minus</span></button> <!-- 2019-02-01 수정 -->
+								<button type="button" class="plus"><span>Plus</span></button>
+								<input type="number" name="i00002_basic" class="inp Edit_Count" id="i00002_basic" min="0" value='15'>
+								<button type="button" class="minus"><span>Minus</span></button>
 							</div>
+							<!--// 2019-02-01 수정 -->
 							<div class="inputBox readonly amount">
 								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
 								<input type="text" name="i00002_basicPrice" class="inp Readonly" id="i00002_basicPrice" readonly="readonly" value="100.00">
