--- a/htmlList.html
+++ b/htmlList.html
@@ -291,25 +291,25 @@
 					<tr>
                         <td>사용자초청(팝업)</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>해지 요청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>해지 요청 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>사용자초청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 
@@ -317,14 +317,22 @@
                         <th>조직</th>
                         <td>Organization 목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td><a target="_blank" href="Organization_a/cup10201.html">cup10201.html</a></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+								2019-02-12  수정
+							</div>
+						</td>
                     </tr>
 					<tr>
-                        <td>Organization 수정</td>
+                        <td>Organization 관리</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td><a target="_blank" href="Organization_a/cup10202.html">cup10202.html</a></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red"></div>
+						</td>
                     </tr>
 					<tr>
                         <td>사용자초청(팝업)</td>
