--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -263,31 +263,31 @@
 					<tr>
                         <td>Sign In</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="user/cup10103.html">cup10103.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>사용자초청(팝업)</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>해지 요청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>해지 요청 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>사용자초청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="user/.html">.html</a></td>
+                        <td><a target="_blank" href="user/.html"></a></td>
                         <td class="red"></td>
                     </tr>
 
@@ -303,7 +303,7 @@
 					<tr>
                         <td>Organization 관리</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="Organization_a/cup10202.html">cup10202.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
@@ -323,7 +323,7 @@
                         <th>계약정보</th>
                         <td>가입고객목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="subscription_a/cup10501.html">cup10501.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
@@ -349,7 +349,8 @@
                         <td></td>
                         <td><a target="_blank" href="subscription_a/cup10505.html">cup10505.html</a></td>
                         <td class="red">
-							2019-02-12 수정
+							2019-02-12 수정 <br />
+							2019-02-18 수정
 						</td>
                     </tr>
 					<tr>
@@ -377,50 +378,52 @@
 					<tr>
                         <td>신규과금정책</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="billing_a/cup10602.html">cup10602.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>정기과금목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="billing_a/cup10603.html">cup10603.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>미승인과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							cup10603.html 화면으로 대체
+						</td>
                     </tr>
 					<tr>
                         <td>승인과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							cup10603.html 화면으로 대체
+						</td>
                     </tr>
 					<tr>
                         <td>지불/미지불 과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							cup10603.html 화면으로 대체
+						</td>
                     </tr>
 					<tr>
                         <td>취소과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
-                    </tr>
-					<tr>
-                        <td>Invoice</td>
-                        <td></td>
-                        <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							cup10603.html 화면으로 대체
+						</td>
                     </tr>
 					<tr>
                         <td>과금정보관리</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td><a target="_blank" href="billing_a/cup10608.html"></a></td>
+                        <td class="red">작업예정</td>
                     </tr>
 					<tr>
                         <td>인쇄미리보기</td>
