--- a/service_a/cup10702.html
+++ b/service_a/cup10702.html
@@ -122,10 +122,13 @@
 				<div class="content editBtns">
 					<!-- 2019-02-07 클래스 추가 -->
 					<div class="tabWrap">
+						<div class="tabHome single">
+							<a href="#">Homes</a>
+						</div>
 						<ul class="tabList">
-							<li class="home single">
-								<a href="#">Home</a>
-							</li>
+							<!-- <li class="home single">
+			<a href="#">Home</a>
+		</li> -->
 						</ul>
 						<div class="tabListBox">
 							<span>More</span>
