--- a/htmlList.html
+++ b/htmlList.html
@@ -137,7 +137,8 @@
                         <td></td>
                         <td><a target="_blank" href="common/header.html">header.html</a></td>
                         <td class="red">
-							2019-02-07 수정							
+							2019-02-07 수정 <br />
+							2019-02-19 수정
 						</td>
                     </tr>
 					<tr>
@@ -162,7 +163,9 @@
                         <td>layout</td>
                         <td></td>
                         <td><a target="_blank" href="layout/layout.html">layout.html</a></td>
-                        <td></td>
+						<td class="red">
+							2019-02-19 수정
+						</td>
                     </tr>
 					<tr>
                         <td>frame</td>
